deploy/alert-manager/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-alert-manager-service # Sets service name
  labels:
    app: alert-manager
    project: monitoring
spec:
  ports:
    - protocol: TCP
      port: 9093 # Sets port to run the postgres application
      targetPort: 9093
      name: alert-manager-9093
  selector:
    app: alert-manager
    project: monitoring
