deploy/alert-manager/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring.alert-manager.ingress
spec:
  rules: []
